syntax = "proto3";

package game;

option go_package = "github.com/DaikoneKisu/recycle-it/server/internal/protos/game";

import "game/game.proto";
import "game/garbage.proto";
import "game/player.proto";
import "math/point-2d.proto";

service GameController {
	rpc HostGame(HostGameRequest) returns (stream HostGameResponse);
	rpc StartGame(stream StartGameRequest) returns (stream StartGameResponse);

	rpc JoinGame(JoinGameRequest) returns (stream JoinGameResponse);
	rpc PlayGame(stream PlayGameRequest) returns (stream PlayGameResponse);
}

message HostGameRequest {
	string hostNickname = 1;
	GameSettings gameSettings = 2;
}

message HostGameResponse {
	repeated Player players = 1;
	string gameID = 2;
	GameSettings gameSettings = 3;
}

message StartGameRequest {
	string gameID = 1;
	GameStageUpdate gameStage = 2;
}

message StartGameResponse {
	Game game = 1;
}

message JoinGameRequest {
	string gameID = 1;
	string guestNickname = 2;
}

message JoinGameResponse {
	repeated Player players = 1;
	string gameID = 2;
	GameSettings gameSettings = 3;
}

message PlayGameRequest {
	string gameID = 1;
	string guestNickname = 2;
	math.Point2D paddleLocation = 3;
}

message PlayGameResponse {
	Game game = 1;
}

message GameStageUpdate {
	repeated GarbageCollectorUpdate garbageCollectors = 1;
	Garbage uncollectedGarbage = 2;
	math.Point2D uncollectedGarbageLocation = 3;
}

message GarbageCollectorUpdate {
	string playerNickname = 1;
	math.Point2D paddleLocation = 2;
	repeated Garbage garbageCollected = 3;
}