syntax = "proto3";

package lobby;

option go_package = "github.com/DaikoneKisu/recycle-it/server/internal/protos/lobby";

import "lobby/lobby.proto";

service LobbyController {
	rpc CreateLobby(CreateLobbyRequest) returns (stream CreateLobbyResponse);
	rpc JoinLobby(JoinLobbyRequest) returns (stream JoinLobbyResponse);
	rpc LeaveMyLobby(LeaveMyLobbyRequest) returns (LeaveMyLobbyResponse);
	rpc GetLobbies(GetLobbiesRequest) returns (GetLobbiesResponse);
	rpc	CloseMyLobby(CloseLobbyRequest) returns (CloseLobbyResponse);
}

// metadata: auth-token
message CreateLobbyRequest {
	lobby.LobbySettings lobbySettings = 1;
}

message CreateLobbyResponse {
	lobby.Lobby lobby = 1;
	bool hasGameStarted = 2;
}

// metadata: auth-token
message JoinLobbyRequest {
	string lobbyId = 1;
}

message JoinLobbyResponse {
	lobby.Lobby lobby = 1;
	bool hasGameStarted = 2;
}

// metadata: auth-token
message LeaveMyLobbyRequest {}

message LeaveMyLobbyResponse {}

message GetLobbiesRequest {
	int32 page = 1;
	int32 itemsPerPage = 2;
}

message GetLobbiesResponse {
	int32 page = 1;
	int32 itemsPerPage = 2;
	int32 totalPages = 3;
	int32 totalItems = 4;
	repeated lobby.Lobby items = 5;
}

// metadata: auth-token
message CloseLobbyRequest {}

message CloseLobbyResponse {}